Updating unit tests